# sudoku

./: LICENSE  README.md  solver.py  status.py  ui.py
src/: Board.cc  Board.h  CMakeLists.txt  Sudoku.cc  Sudoku.h  main.cc  test.cc
